--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1617550d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff8021419d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f161721c410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f161721c610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff801e50490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff801e506d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f16177d7d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f16177d7f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8023b1d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff8023b1f90&gt;]</pre>
 </div>
 
 </div>
