--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff01c9f4d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faaf01891d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff01c70e450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff01c6b7710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faaefe47190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faaefe47390&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff01cccd190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff01cc76f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faaf0412a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faaf0412c10&gt;]</pre>
 </div>
 
 </div>
