--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faaf01891d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9f90a2fa90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faaefe47190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faaefe47390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9f9074f550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9f9075e790&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faaf0412a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faaf0412c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9f90cc0e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9f90cb8d10&gt;]</pre>
 </div>
 
 </div>
