--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1ebf6a9b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5033207f50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ebf328450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1ebf328650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5032bee310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5032bee510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ebf8f1cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1ebf8f1ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5033479c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5033479e90&gt;]</pre>
 </div>
 
 </div>
