--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f04fa404050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe02c857e50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f04fa12a510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f04fa12a710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe02c569450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe02c569650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f04fa689cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f04fa689ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe02cdf6d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe02cdf6f50&gt;]</pre>
 </div>
 
 </div>
