--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc326c445d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa9aca92e10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc326995250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc326995450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9ac743210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa9ac743410&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc326ee7ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc326ee7cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9acd0ea90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa9acd0ec90&gt;]</pre>
 </div>
 
 </div>
