--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd9f19e2090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0872115950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd9f1709490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd9f1709690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0872168650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0872168850&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd9f1cbd0d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd9f1c66f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f08726d8f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f08726e3150&gt;]</pre>
 </div>
 
 </div>
