--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0872115950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f28981f2e10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0872168650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0872168850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2897efc950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2897f14450&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f08726d8f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f08726e3150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f28984da2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f289846ad90&gt;]</pre>
 </div>
 
 </div>
