--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2f4ccb4510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5f2147eb50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2f4c9cda50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2f4c9cdc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f211aecd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5f211aeed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2f4cf8e090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2f4cf3d510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f21704650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5f21704850&gt;]</pre>
 </div>
 
 </div>
