--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd5355e6550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff563e6d1d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd53531ab50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd53531ad90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff563b9ab90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff563b9ad90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd5358c3750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd5358716d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff56410a510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff56410a710&gt;]</pre>
 </div>
 
 </div>
