--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6a9d826f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbac3060d50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6a9d251590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6a9d50fc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbac2d5b110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbac2d67dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6a9dad13d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6a9dad15d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbac32cc250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbac32d7710&gt;]</pre>
 </div>
 
 </div>
