--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feb860c8150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1a6db97090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feb85e0dd50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feb85e0df50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a6d8bfb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1a6d8bfd90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feb8669a650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feb8669a850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a6e14c450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1a6e14c690&gt;]</pre>
 </div>
 
 </div>
