--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fee99ec8490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc75129ced0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee9a1aec50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee9a1aee50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc751854c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc751854e10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee9aa3e550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee9aa3e750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc751e18490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc751e18690&gt;]</pre>
 </div>
 
 </div>
