--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2cc76f8550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6434be6890&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cc7117610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2cc743fe10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6434f01b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6434f1ca50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cc79e2750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2cc7993950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6435474590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f643546a450&gt;]</pre>
 </div>
 
 </div>
