--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe38bfb9090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6041a22210&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe38bce9c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe38bce9e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6041729dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6041729fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe38c23f610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe38c23f810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6041cad650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6041cad890&gt;]</pre>
 </div>
 
 </div>
