--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fceeb162a50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9b43bf2450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fceea202bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fceea202dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b438ebe90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9b439120d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fceea759550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fceea759750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b43e69750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9b43e69950&gt;]</pre>
 </div>
 
 </div>
