--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f702a3270d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd7b1e45ed0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f702a03bbd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f702a03bdd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd7b1ae9bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd7b1ae9dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f702a8c94d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f702a8c96d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd7b20bd550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd7b20bd750&gt;]</pre>
 </div>
 
 </div>
