--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe90d868a10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0b21522810&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe90d5a3c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe90d5a3e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b20f39e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0b20f250d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe90daf9590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe90daf9790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b217c1750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0b217c1950&gt;]</pre>
 </div>
 
 </div>
